--- a/src/main/resources/static/i18n/idm/cn.json
+++ b/src/main/resources/static/i18n/idm/cn.json
@@ -3,9 +3,9 @@
       "GENERAL" : {
         "MAIN-TITLE": "Activiti - Identity Management",
         "NAVIGATION": {
-            "PROFILE": "Personal",
-            "USER-MGMT": "Users",
-            "GROUP-MGMT": "Groups"
+            "PROFILE": "个人",
+            "USER-MGMT": "用户",
+            "GROUP-MGMT": "组"
         },
         "ACTION": {
           "CANCEL": "取消",
@@ -97,15 +97,15 @@
          }
       },
       "FUNCTIONAL-GROUP-MGMT": {
-        "CREATE": "Create group",
-        "NO-GROUPS": "No groups found",
-        "NO-SELECTION": "Select a group from the list on the left",
+        "CREATE": "创建组",
+        "NO-GROUPS": "未找到组",
+        "NO-SELECTION": "在左侧导航中组类别中选择个组",
         "SYNC-DETAILS": "Synchronization details",
         "EXTERNAL-ID": "External id:",
         "LAST-SYNC-TIME": "Last update:",
-        "MEMBERS": "Group members",
+        "MEMBERS": "组成员",
         "SUBGROUPS": "Subgroups",
-        "NO-MEMBERS": "No users found",
+        "NO-MEMBERS": "没有用户找到",
         "ADD-USER": "+ add user",
         "ADD-SUBGROUP": "+ add subgroup",
         "NO-SUBGROUPS": "No subgroups found",
@@ -114,17 +114,17 @@
         "INACTIVE-DESCRIPTION": "This group has been deactivated. Users will still be able complete currently assigned tasks to this group, but new process definitions cannot use this group anymore.",
         "ADD-POPOVER-TITLE": "Select user",
             "POPUP": {
-                "CREATE-TITLE": "Create group",
-                "CREATE-ID": "Group id",
-                "CREATE-NAME": "Name",
-                "DELETE-TITLE": "Delete group",
-                "DELETE-DESCRIPTION": "Are you sure you want to delete this group?",
-                "DELETE-CONFIRM": "Confirm",
+                "CREATE-TITLE": "创建组",
+                "CREATE-ID": "组编号",
+                "CREATE-NAME": "组名",
+                "DELETE-TITLE": "删除组",
+                "DELETE-DESCRIPTION": "请确认是否删除?",
+                "DELETE-CONFIRM": "删除确认",
                 "DEACTIVATE-TITLE": "Deactivate group",
                 "DEACTIVATE-DESCRIPTION": "Are you sure you want to delete this group? This will delete all sub groups too. Note that a group will first be deactivated, such that tasks of processes can be properly finished. Clicking the removal button a second time will delete the group completely.",
-                "DELETE-MEMBER-TITLE": "Delete group member",
-                "DELETE-MEMBER-DESCRIPTION": "Are you sure you want to delete this user from the group?",
-                "DELETE-CONFIRM": "Confirm",
+                "DELETE-MEMBER-TITLE": "删除组成员",
+                "DELETE-MEMBER-DESCRIPTION": "请确认是否删除组成员?",
+                "DELETE-CONFIRM": "删除确认",
                 "ADD-MEMBER-TITLE": "Add user",
                 "ADD-MEMBER-NO-USERS": "No users found",
                 "ADD-MEMBER-CONFIRM": "Add ({{selectedUsers.length}})",
